Bug fixes, safety improvements, minor API improvements.
git-svn-id: https://svn.kenai.com/svn/jdbfdriver~jdbfdriver-source@8 3c4314c4-b677-ce32-ed35-be3e328b34d6